Bug 242734 - kpatience crash always when i try start grandfather game
Summary: kpatience crash always when i try start grandfather game
Status: RESOLVED FIXED
Alias: None
Product: kpat
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Stephan Kulow
URL:
Keywords:
: 243614 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-06-25 00:10 UTC by mrl586
Modified: 2010-07-05 02:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace (7.23 KB, application/octet-stream)
2010-06-25 21:36 UTC, Vitor Boschi da Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mrl586 2010-06-25 00:10:05 UTC
Version:           unspecified (using Devel) 
OS:                Linux

KPatience crash when I try start the Grandfather game in main menu. Other games works without problems.

Reproducible: Always

Steps to Reproduce:
1. Open KPatience program
2. Click Grandfather in main menu

Actual Results:  
KPatience crash

Expected Results:  
This game should be start normally.

mrl586@COMPAQ:~$ lsb_release -rd
Description:    Ubuntu maverick (development branch)
Release:        10.10
mrl586@COMPAQ:~$ apt-cache policy kpat
kpat:
  Asennettu: 4:4.4.85-0ubuntu2
  Ehdokas: 4:4.4.85-0ubuntu2
  Versiotaulukko:
 *** 4:4.4.85-0ubuntu2 0
        500 http://archive.ubuntu.com/ubuntu/ maverick/main Packages
        100 /var/lib/dpkg/status

This bug in Launcpad (Ubuntu bug tracker): https://bugs.launchpad.net/bugs/598159
Comment 1 Vitor Boschi da Silva 2010-06-25 21:36:15 UTC
Created attachment 48330 [details]
Backtrace

I can confirm this bug on fedora 13, running kde 4.5 beta2
Comment 2 Parker Coates 2010-06-26 21:08:46 UTC
SVN commit 1143171 by coates:

Only start a drop when enabling autodrop via the GUI.

This is the smarter way to do things, but I wouldn't have thought it
necessary. Although I can't reproduce it locally, this should avoid the
crash reported in bug 242734.

BUG:242734

 M  +3 -6      dealer.cpp  
 M  +13 -5     mainwindow.cpp  
 M  +1 -1      mainwindow.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1143171
Comment 3 Parker Coates 2010-07-05 02:58:47 UTC
*** Bug 243614 has been marked as a duplicate of this bug. ***