Only start a drop when enabling autodrop via the GUI.

This is the smarter way to do things, but I wouldn't have thought it
necessary. Although I can't reproduce it locally, this should avoid the
crash reported in bug 242734.

BUG:242734

svn path=/trunk/KDE/kdegames/kpat/; revision=1143171